hospital page updated

--- a/hospitals.html
+++ b/hospitals.html
@@ -141,7 +141,7 @@
                 <div class="carousel-inner" role="listbox">
 
                     <!-- Slide 1 -->
-                    <div class="carousel-item active mt-5" style="background-image: url(assets/img/hospital/slider1.jpg)">
+                    <div class="carousel-item active mt-5" style="background-image: url(assets/img/hospital/new_slide4.png)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX:
@@ -154,7 +154,7 @@
                     </div>
 
                     <!-- Slide 2 -->
-                    <div class="carousel-item mt-5" style="background-image: url(assets/img/hospital/slider2.jpg)">
+                    <div class="carousel-item mt-5" style="background-image: url(assets/img/hospital/new_slide3.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX:
@@ -167,7 +167,7 @@
                     </div>
 
                     <!-- Slide 3 -->
-                    <div class="carousel-item mt-5" style="background-image: url(assets/img/hospital/slider3.jpg)">
+                    <div class="carousel-item mt-5" style="background-image: url(assets/img/hospital/new_slide1.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX:
@@ -202,7 +202,7 @@
                         <div id="carouselExampleIndicatorsE" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active d-flex align-items-center">
-                                    <img src="assets/img/hospital/1.jpg" class="img-fluid" alt="...">
+                                    <img src="assets/img/hospital/new1.png" class="img-fluid" alt="...">
                                 </div>
                             </div>
                         </div>
@@ -252,7 +252,7 @@
                         <div id="carouselExampleIndicatorsH2" class="carousel slide mt-3" data-bs-ride="carousel">
                             <div class="carousel-inner d-flex align-items-center">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/hospital/2.jpg" class="img-fluid" alt="...">
+                                    <img src="assets/img/hospital/new3.jpg" class="img-fluid" alt="...">
                                 </div>
                             </div>
                         </div>
@@ -268,7 +268,7 @@
                         <div id="carouselExampleIndicatorsI3" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/hospital/3.jpg" class="img-fluid" alt="...">
+                                    <img src="assets/img/hospital/new2.JPG" class="img-fluid" alt="...">
                                 </div>
                                 <!-- <div class="carousel-item">
                         <img src="assets/img/retail/b49c60fc533489385afe54292bc9b216.JPG" class="img-fluid" alt="...">
