retail page updated

--- a/retail.html
+++ b/retail.html
@@ -39,11 +39,18 @@
       background-color: transparent;
     }
 
-    @media only screen and (max-width: 415px) {
+    @media only screen and (min-width: 992px) {
       #hero {
-        height: 50vh;
+        height: 90vh;
       }
     }
+
+    @media only screen and (max-width: 415px) {
+      #hero {
+        height: 55vh;
+      }
+    }
+    
   </style>
 
   <!-- =======================================================
