--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </div>
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero">
+  <section id="hero" style="height: 90vh;">
     <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
       <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
