retail page updated

--- a/retail.html
+++ b/retail.html
@@ -33,26 +33,6 @@
   <!-- Custome CSS File -->
   <link rel="stylesheet" href="assets/css/custom.css">
 
-  <style>
-    #hero .carousel-item::before {
-      content: '';
-      background-color: transparent;
-    }
-
-    @media only screen and (min-width: 992px) {
-      #hero {
-        height: 90vh;
-      }
-    }
-
-    @media only screen and (max-width: 415px) {
-      #hero {
-        height: 55vh;
-      }
-    }
-    
-  </style>
-
   <!-- =======================================================
   * Author: Abu Saleh Faysal
   ======================================================== -->
@@ -162,7 +142,7 @@
   <main id="main">
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero">
+    <section id="hero" style="height: 80vh;">
       <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
         <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
@@ -170,33 +150,41 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-color: #ffffff;">
-            <img class="img-fluid" style="margin-top: 300px;" src="assets/img/retail/j1.jpeg" alt="">
+          <div class="carousel-item active mt-5" style="background-image: url(assets/img/retail/s1.jpg)">
+            <div class="carousel-container mt-5">
+              <div class="container mt-5">
+                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span>
+                  <br>
+                  Are you looking to create a dynamic in-store experience with Digital Store Signage? 
+                </h2>
+              </div>
+            </div>
           </div>
 
           <!-- Slide 2 -->
-          <div class="carousel-item" style="background-color: #ffffff;">
-            <img class="img-fluid" style="margin-top: 300px;" src="assets/img/retail/j2.jpeg"
-              alt="">
+          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
+            <div class="carousel-container mt-5">
+              <div class="container mt-5">
+                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span>
+                  <br>
+                  We will provide you with a solution that promises to increase customer engagement and boost sales. 
+                </h2>
+              </div>
+            </div>
           </div>
-
 
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background-color: #ffffff;">
-            <img class="img-fluid" style="margin-top: 300px;" src="assets/img/retail/j3.jpeg"
-              alt="">
+          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/s4.jpg)">
+            <div class="carousel-container mt-5">
+              <div class="container mt-5">
+                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span>
+                  <br>
+                  Enhance Branding with Retail Digital Signage
+                </h2>
+              </div>
+            </div>
           </div>
-
-
         </div>
-
-        <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-        </a>
-
-        <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a> -->
 
       </div>
     </section><!-- End Hero -->
