rental page added

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               </ul>
             </li>
             <li><a href="#">Case Studies</a></li>
-            <li><a href="#">Rentals</a></li>
+            <li><a href="rental.html">Rentals</a></li>
             <li><a href="contact.html">Contact</a></li>
             <!-- <li><a href="blog.html">Blog</a></li> -->
 
