--- a/index.html
+++ b/index.html
@@ -79,15 +79,13 @@
               <ul>
 
                 <li><a href="about.html">Welcome/About </a></li>
-                <li><a href="#">How it works</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">What we do</a></li>
-                <li><a href="#">Customers/Our work</a></li>
-                <li><a href="#">Solutions/ Industries</a></li>
-                <li><a href="#">Contents Editing</a></li>
-                <li><a href="#">Screens / Players
-                    Ready to learn more / Contact us
-                  </a></li>
+                <li><a href="#howItWorks">How it works</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#whatWeDo">What we do</a></li>
+                <li><a href="#ourWork">Customers/Our work</a></li>
+                <li><a href="#industries">Solutions/ Industries</a></li>
+                <li><a href="#">Advertise With Us</a></li>
+                <li><a href="#">Products</a></li>
               </ul>
             </li>
 
@@ -241,7 +239,7 @@
   <main id="main">
 
     <!-- ======= Features Section ======= -->
-    <section id="about" class="about">
+    <section class="about">
       <div class="container">
 
         <div class="row content text-center">
@@ -278,7 +276,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= How it works Section ======= -->
-    <section id="about" class="about white-smoke">
+    <section id="howItWorks" class="about white-smoke">
       <div class="container">
 
         <div class="row content">
@@ -330,7 +328,7 @@
     </section><!-- End How it works Section -->
 
     <!-- ======= What we do Section ======= -->
-    <section id="about" class="about">
+    <section id="whatWeDo" class="about">
       <div class="container">
 
         <div class="row content">
@@ -531,7 +529,7 @@
     <!-- End Digital Signage Section Section -->
 
     <!-- ======= Start Features Section ======= -->
-    <div class="feature mt-5">
+    <div id="features" class="feature mt-5">
       <div class="container">
         <div class="row content text-center">
           <h2>FEATURES</h2>
@@ -626,7 +624,7 @@
 
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio white-smoke">
+    <section id="ourWork" class="portfolio white-smoke">
       <div class="container">
 
         <div class="row">
@@ -825,7 +823,7 @@
 
 
     <!-- ======= Start Industries Section ======= -->
-    <div class="feature mt-5">
+    <div id="industries" class="feature mt-5">
       <div class="container">
         <div class="row content text-center">
           <h2>INDUSTRIES</h2>
