--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
 
-                <li><a href="about.html">Welcome/About </a></li>
+                <li><a href="#aboutus">Welcome/About </a></li>
                 <li><a href="#howItWorks">How it works</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#whatWeDo">What we do</a></li>
@@ -444,61 +444,67 @@
 
         <div class="carousel-item active">
           <!-- <img src="assets/img/features-4.png" class="img-fluid" alt="..."> -->
-          <div class="container row">
-            <div class="col-md-5 offset-md-2">
-              <br>
-              <br>
-              <h1><b><span class="red">Simple Digital Signage</span><br>at Your Fingertips.</b></h1>
-              <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s why
-                we have developers in-house who can help with bespoke projects. Our digital signage solutions are
-                uniquely versatile, able to integrate with other forms of software. <br>We are the market leader for
-                <span class="text-primary">estate agent digital window displays</span>, integrating with property
-                databases to effortlessly show listings on screen.
-              </p>
-            </div>
-            <div class="col-md-4 offset-md-1 mt-5">
-              <img src="assets/img/digisig1.jpg" class="img-fluid" alt="...">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-5 offset-md-2">
+                <br>
+                <br>
+                <h1><b><span class="red">Simple Digital Signage</span><br>at Your Fingertips.</b></h1>
+                <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s why
+                  we have developers in-house who can help with bespoke projects. Our digital signage solutions are
+                  uniquely versatile, able to integrate with other forms of software. <br>We are the market leader for
+                  <span class="text-primary">estate agent digital window displays</span>, integrating with property
+                  databases to effortlessly show listings on screen.
+                </p>
+              </div>
+              <div class="col-md-4 offset-md-1 mt-5">
+                <img src="assets/img/digisig1.jpg" class="img-fluid" alt="...">
+              </div>
             </div>
           </div>
         </div>
 
         <div class="carousel-item">
           <!-- <img src="assets/img/features-1.png" class="img-fluid" alt="..."> -->
-          <div class="container row">
-            <div class="col-md-4 offset-md-2 mt-5">
-              <img src="assets/img/digisig2.jpg" class="img-fluid" alt="...">
-            </div>
-            <div class="col-md-5 offset-md-1">
-              <br>
-              <br>
-              <h1><b>Cloud-based <span class="red">User-friendly Editor.</span> </b></h1>
-              <p>Our digital signage solutions are powered by a simple cloud-based CMS. Why choose cloud-based? You can
-                log in from any PC to remotely create and manage content in our <span class="text-primary">drag & drop
-                  editor.</span> <br> Through powerful <span class="text-primary">digital signage widgets</span> combine
-                your images, videos, social media, RSS feeds, live web pages, and more to create engaging presentations.
-                <br>Through <span class="text-primary">digital signage scheduling</span> automate your content to play
-                at particular times of the day, week, or month. Make any changes and your screens automatically update.
-              </p>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 offset-md-2 mt-5">
+                <img src="assets/img/digisig2.jpg" class="img-fluid" alt="...">
+              </div>
+              <div class="col-md-5 offset-md-1">
+                <br>
+                <br>
+                <h1><b>Cloud-based <span class="red">User-friendly Editor.</span> </b></h1>
+                <p>Our digital signage solutions are powered by a simple cloud-based CMS. Why choose cloud-based? You can
+                  log in from any PC to remotely create and manage content in our <span class="text-primary">drag & drop
+                    editor.</span> <br> Through powerful <span class="text-primary">digital signage widgets</span> combine
+                  your images, videos, social media, RSS feeds, live web pages, and more to create engaging presentations.
+                  <br>Through <span class="text-primary">digital signage scheduling</span> automate your content to play
+                  at particular times of the day, week, or month. Make any changes and your screens automatically update.
+                </p>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="carousel-item">
           <!-- <img src="assets/img/features-4.png" class="img-fluid" alt="..."> -->
-          <div class="container row">
-            <div class="col-md-5 offset-md-2">
-              <br>
-              <br>
-              <h1><b><span class="red">Simple Digital Signage</span><br>at Your Fingertips.</b></h1>
-              <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s why
-                we have developers in-house who can help with bespoke projects. Our digital signage solutions are
-                uniquely versatile, able to integrate with other forms of software. <br>We are the market leader for
-                <span class="text-primary">estate agent digital window displays</span>, integrating with property
-                databases to effortlessly show listings on screen.
-              </p>
-            </div>
-            <div class="col-md-4 offset-md-1 mt-5">
-              <img src="assets/img/digisig3.jpg" class="img-fluid" alt="...">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-5 offset-md-2">
+                <br>
+                <br>
+                <h1><b><span class="red">Simple Digital Signage</span><br>at Your Fingertips.</b></h1>
+                <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s why
+                  we have developers in-house who can help with bespoke projects. Our digital signage solutions are
+                  uniquely versatile, able to integrate with other forms of software. <br>We are the market leader for
+                  <span class="text-primary">estate agent digital window displays</span>, integrating with property
+                  databases to effortlessly show listings on screen.
+                </p>
+              </div>
+              <div class="col-md-4 offset-md-1 mt-5">
+                <img src="assets/img/digisig3.jpg" class="img-fluid" alt="...">
+              </div>
             </div>
           </div>
         </div>
