--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 
                 <li><a href="#aboutus">Welcome/About </a></li>
                 <li><a href="#howItWorks">How it works</a></li>
-                <li><a href="#features">Features</a></li>
                 <li><a href="#whatWeDo">What we do</a></li>
-                <li><a href="#ourWork">Customers/Our work</a></li>
-                <li><a href="#industries">Solutions/ Industries</a></li>
-                <li><a href="#">Advertise With Us</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#ourWork">Our work</a></li>
+                <li><a href="#industries">Solutions/Industries</a></li>
+                <li><a href="#customers">Our Customers</a></li>
+                <li><a href="#contactUs">Contact Us</a></li>
               </ul>
             </li>
 
@@ -239,10 +239,10 @@
   <main id="main">
 
     <!-- ======= Features Section ======= -->
-    <section class="about">
+    <section id="aboutus" class="about">
       <div class="container">
 
-        <div class="row content text-center">
+        <div class="row content text-center" id="howItWorks">
           <h2>DIGITAL SIGNAGE EVERYONE CAN USE</h2>
           <div class="col-md-4">
             <img width="80" height="80" class="img-fluid" src="assets/img/features/content.png" alt="">
@@ -276,7 +276,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= How it works Section ======= -->
-    <section id="howItWorks" class="about white-smoke">
+    <section class="about white-smoke">
       <div class="container">
 
         <div class="row content">
@@ -296,7 +296,7 @@
           <br>
           <br>
           <br>
-          <div class="row">
+          <div class="row" id="whatWeDo">
             <div class="col-md-6">
               <div>
                 <h4>Step 1: Upload contents</h4>
@@ -328,7 +328,7 @@
     </section><!-- End How it works Section -->
 
     <!-- ======= What we do Section ======= -->
-    <section id="whatWeDo" class="about">
+    <section class="about">
       <div class="container">
 
         <div class="row content">
@@ -512,7 +512,7 @@
       </div>
       <br>
       <br>
-      <div class="carousel-indicators">
+      <div class="carousel-indicators" id="features">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
@@ -535,7 +535,7 @@
     <!-- End Digital Signage Section Section -->
 
     <!-- ======= Start Features Section ======= -->
-    <div id="features" class="feature mt-5">
+    <div class="feature mt-5">
       <div class="container">
         <div class="row content text-center">
           <h2>FEATURES</h2>
@@ -583,7 +583,7 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row" id="ourWork">
             <div class="col-md-2 offset-md-1">
               <img width="80" height="80" src="assets/img/features/calendar.png" alt="" class="img-fluid">
               <br>
@@ -630,7 +630,7 @@
 
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="ourWork" class="portfolio white-smoke">
+    <section class="portfolio white-smoke">
       <div class="container">
 
         <div class="row">
@@ -644,7 +644,7 @@
           </div>
         </div>
 
-        <div class="row portfolio-container">
+        <div class="row portfolio-container" id="industries">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -829,7 +829,7 @@
 
 
     <!-- ======= Start Industries Section ======= -->
-    <div id="industries" class="feature mt-5">
+    <div class="feature mt-5">
       <div class="container">
         <div class="row content text-center">
           <h2>INDUSTRIES</h2>
@@ -903,7 +903,7 @@
                 morale, maximize productivity and enhance employee motivation.</p>
             </div>
           </div>
-          <div class="row">
+          <div class="row" id="customers">
             <div class="col-md-4">
               <img width="80" height="80" src="assets/img/industries/education.png" alt="" class="img-fluid">
               <br>
@@ -1205,7 +1205,7 @@
       <br>
       <div class="container">
         <h2>CUSTOMERS</h2>
-        <div class="row">
+        <div class="row" id="contactUs">
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
