home page slider minor fix

--- a/index.html
+++ b/index.html
@@ -477,8 +477,7 @@
                 <h1><b>Cloud-based <span class="red">User-friendly Editor.</span> </b></h1>
                 <p>Our digital signage solutions are powered by a simple cloud-based CMS. Why choose cloud-based? You can
                   log in from any PC to remotely create and manage content in our <span class="text-primary">drag & drop
-                    editor.</span> <br> Through powerful <span class="text-primary">digital signage widgets</span> combine
-                  your images, videos, social media, RSS feeds, live web pages, and more to create engaging presentations.
+                    editor.</span> 
                   <br>Through <span class="text-primary">digital signage scheduling</span> automate your content to play
                   at particular times of the day, week, or month. Make any changes and your screens automatically update.
                 </p>
