home page updated with navbar effect

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
           </div>
           <div class="col-md-4 text-center p-2">
-            <a href="index.html"><img style="height: 100px;" class="img-fluid" src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
+            <a href="index.html"><img style="height: 100px;" class="img-fluid"
+                src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
           </div>
           <div class="col-md-4 text-center p-2">
             <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
@@ -154,7 +155,8 @@
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5">
                 <span class="red">AFLAX: RETAIL</span> <br> PUT YOUR
-                CUSTOMERS IN THE MOOD TO BUY</h2>
+                CUSTOMERS IN THE MOOD TO BUY
+              </h2>
               <p class="animate__animated animate__fadeInUp">Create a fully-branded in-store experience that drives
                 lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers
                 looking for something special, we offer a range of innovative digital signage retail solutions to make
@@ -182,8 +184,10 @@
         <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-c.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
-              <h2 class="animate__animated animate__fadeInDown mt-5"><span class="green">AFLAX: HEALTHCARE</span> <br>DELIVER
-                A HEALTHY DOSE OF MUSIC – AND MORE</h2>
+              <h2 class="animate__animated animate__fadeInDown mt-5"><span class="green">AFLAX: HEALTHCARE</span>
+                <br>DELIVER
+                A HEALTHY DOSE OF MUSIC – AND MORE
+              </h2>
               <p class="animate__animated animate__fadeInUp">With Aflax’s proven healthcare
                 solutions, you’ll provide a soothing and welcoming environment for your patients. Bundle solutions to
                 reduce overhead costs for maximum ROI.</p>
@@ -212,8 +216,10 @@
         <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-c.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
-              <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: HOSPITALITY</span> <br>PUT
-                THEM IN THE MOOD TO STAY</h2>
+              <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: HOSPITALITY</span>
+                <br>PUT
+                THEM IN THE MOOD TO STAY
+              </h2>
               <p class="animate__animated animate__fadeInUp">Guests are always coming and going. Whatever
                 your style – boutique, extended stay, or full service – the right audio, visuals and scent can work
                 together to set the distinct mood that speaks to your brand and your clientele, ensuring lasting guest
@@ -238,10 +244,105 @@
 
   <main id="main">
 
-    <!-- ======= Features Section ======= -->
-    <section id="aboutus" class="about">
+    <!-- ======= Start Features Section ======= -->
+    <section class="products p-0 mt-5">
       <div class="container">
+        <h2 class="text-center text-uppercase text-danger fw-bold">Some of Our Digital Signage Product
+        </h2>
+        <div class="row mt-3" id="aboutus">
+          <div class="col-md-3">
+            <a href="indoor-lcd-display.html">
+              <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Indoor LCD Display</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="lcd-video-wall.html">
+              <img src="assets/img/LCD-Video-Wall/2.png" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LCD Video Wall</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="lcd-advertising-display.html">
+              <img src="assets/img/LCD-Advertising-Display/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LCD Advertising Display</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="outdoor-lcd-display.html">
+              <img src="assets/img/Outdoor-LCD-Display/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Outdoor LCD Display</b></p>
+            </a>
+          </div>
+        </div>
+        <p class="text-center">
+          <button class="btn btn-danger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+            aria-expanded="false" aria-controls="collapseExample">
+            
+          </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="row mt-3">
+            <div class="col-md-3">
+              <a href="advertising-light-box.html">
+                <img src="assets/img/Advertising-Light-Box/1A.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Advertising Lightbox</b></p>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="frontlit-billboard.html">
+                <img src="assets/img/frontlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Frontlit Billboard</b></p>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="backlit-billboard.html">
+                <img src="assets/img/backlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Backlit Billboard</b></p>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="led-screen-billboard.html">
+                <img src="assets/img/LED-Screen-Billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>LED Screen Billboard</b></p>
+              </a>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-md-3">
+              <a href="scrolling-billboard.html">
+                <img src="assets/img/scrolling-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Scrolling Billboard</b></p>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="scrolling-lightbox.html">
+                <img src="assets/img/Scrolling-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Scrolling Lightbox</b></p>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="lamp-pole-lightbox.html">
+                <img src="assets/img/Lamp-Pole-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Lamp Pole Lightbox</b></p>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="lamp-pole-display.html">
+                <img src="assets/img/Lamp-Pole-Display/tgg.png" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Lamp Pole Display</b></p>
+              </a>
+            </div>
+          </div>
+        </div>
 
+      </div>
+    </section>
+    <!-- End Features Section -->
+
+    <!-- ======= Features Section ======= -->
+    <section class="about">
+      <div class="container">
         <div class="row content text-center" id="howItWorks">
           <h2>DIGITAL SIGNAGE EVERYONE CAN USE</h2>
           <div class="col-md-4">
@@ -345,7 +446,8 @@
               </div>
               <h6><b>Digital Menu Boards</b></h6>
               <p>Drive upsells, cross-sells and average purchase amounts at point of sale by displaying dynamic and
-                relevant content to your customers with digital Digital menu boards. The ease of implementation means you can
+                relevant content to your customers with digital Digital menu boards. The ease of implementation means
+                you can
                 get up and running in minutes, with minimal disruption to your store or restaurant.</p>
             </div>
             <div class="col-md-4">
@@ -353,7 +455,8 @@
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/interactive.png" alt="">
               </div>
               <h6><b>Interactive and Intelligent Signage</b></h6>
-              <p>From place and learn and intelligent Digital menu boards to magic mirrors and touch sensor experiences, Aflax
+              <p>From place and learn and intelligent Digital menu boards to magic mirrors and touch sensor experiences,
+                Aflax
                 provides you with all the tools to build fully interactive applications and signage content with ease.
               </p>
             </div>
@@ -374,7 +477,8 @@
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/outdoor.png" alt="">
               </div>
               <h6><b>Outdoor Signage</b></h6>
-              <p>From roadside totems to outdoor Digital menu boards, there is a wealth of opportunity for using outdoor digital
+              <p>From roadside totems to outdoor Digital menu boards, there is a wealth of opportunity for using outdoor
+                digital
                 signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall by
                 capturing new customers and raising brand awareness.</p>
             </div>
@@ -450,7 +554,8 @@
                 <br>
                 <br>
                 <h1><b><span class="red">Simple Digital Signage</span><br>at Your Fingertips.</b></h1>
-                <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s why
+                <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s
+                  why
                   we have developers in-house who can help with bespoke projects. Our digital signage solutions are
                   uniquely versatile, able to integrate with other forms of software. <br>We are the market leader for
                   <span class="text-primary">estate agent digital window displays</span>, integrating with property
@@ -475,11 +580,13 @@
                 <br>
                 <br>
                 <h1><b>Cloud-based <span class="red">User-friendly Editor.</span> </b></h1>
-                <p>Our digital signage solutions are powered by a simple cloud-based CMS. Why choose cloud-based? You can
+                <p>Our digital signage solutions are powered by a simple cloud-based CMS. Why choose cloud-based? You
+                  can
                   log in from any PC to remotely create and manage content in our <span class="text-primary">drag & drop
-                    editor.</span> 
+                    editor.</span>
                   <br>Through <span class="text-primary">digital signage scheduling</span> automate your content to play
-                  at particular times of the day, week, or month. Make any changes and your screens automatically update.
+                  at particular times of the day, week, or month. Make any changes and your screens automatically
+                  update.
                 </p>
               </div>
             </div>
@@ -494,7 +601,8 @@
                 <br>
                 <br>
                 <h1><b><span class="red">Simple Digital Signage</span><br>at Your Fingertips.</b></h1>
-                <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s why
+                <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s
+                  why
                   we have developers in-house who can help with bespoke projects. Our digital signage solutions are
                   uniquely versatile, able to integrate with other forms of software. <br>We are the market leader for
                   <span class="text-primary">estate agent digital window displays</span>, integrating with property
