owl carousel added in home page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
   <!-- Custome CSS File -->
   <link rel="stylesheet" href="assets/css/custom.css">
 
+  <!-- Owl Carousel File -->
+  <link rel="stylesheet" href="assets/owlcarousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/owlcarousel/owl.theme.default.min.css">
+
   <!-- =======================================================
   * Author: Abu Saleh Faysal
   ======================================================== -->
@@ -244,101 +248,87 @@
 
   <main id="main">
 
-    <!-- ======= Start Features Section ======= -->
-    <section class="products p-0 mt-5">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-danger fw-bold">Some of Our Digital Signage Product
-        </h2>
-        <div class="row mt-3" id="aboutus">
-          <div class="col-md-3">
+    <div class="container mt-5">
+      <h2 class="text-center text-uppercase text-danger fw-bold">Some of Our Digital Signage Product
+      </h2>
+      <div class="row">
+        <div class="owl-carousel owl-theme ">
+          <div class="item">
             <a href="indoor-lcd-display.html">
               <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Indoor LCD Display</b></p>
             </a>
           </div>
-          <div class="col-md-3">
+          <div class="item">
             <a href="lcd-video-wall.html">
               <img src="assets/img/LCD-Video-Wall/2.png" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>LCD Video Wall</b></p>
             </a>
           </div>
-          <div class="col-md-3">
+          <div class="item">
             <a href="lcd-advertising-display.html">
               <img src="assets/img/LCD-Advertising-Display/2.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>LCD Advertising Display</b></p>
             </a>
           </div>
-          <div class="col-md-3">
+          <div class="item">
             <a href="outdoor-lcd-display.html">
               <img src="assets/img/Outdoor-LCD-Display/2.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Outdoor LCD Display</b></p>
             </a>
           </div>
-        </div>
-        <p class="text-center">
-          <button class="btn btn-danger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-            aria-expanded="false" aria-controls="collapseExample">
-            
-          </button>
-        </p>
-        <div class="collapse" id="collapseExample">
-          <div class="row mt-3">
-            <div class="col-md-3">
-              <a href="advertising-light-box.html">
-                <img src="assets/img/Advertising-Light-Box/1A.jpg" alt="" class="img-fluid border border-dark">
-                <p class="text-center text-dark"><b>Advertising Lightbox</b></p>
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="frontlit-billboard.html">
-                <img src="assets/img/frontlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
-                <p class="text-center text-dark"><b>Frontlit Billboard</b></p>
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="backlit-billboard.html">
-                <img src="assets/img/backlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
-                <p class="text-center text-dark"><b>Backlit Billboard</b></p>
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="led-screen-billboard.html">
-                <img src="assets/img/LED-Screen-Billboard/1A.jpg" alt="" class="img-fluid border border-dark">
-                <p class="text-center text-dark"><b>LED Screen Billboard</b></p>
-              </a>
-            </div>
+          <div class="item">
+            <a href="advertising-light-box.html">
+              <img src="assets/img/Advertising-Light-Box/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Advertising Lightbox</b></p>
+            </a>
           </div>
-          <div class="row mt-3">
-            <div class="col-md-3">
-              <a href="scrolling-billboard.html">
-                <img src="assets/img/scrolling-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
-                <p class="text-center text-dark"><b>Scrolling Billboard</b></p>
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="scrolling-lightbox.html">
-                <img src="assets/img/Scrolling-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
-                <p class="text-center text-dark"><b>Scrolling Lightbox</b></p>
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="lamp-pole-lightbox.html">
-                <img src="assets/img/Lamp-Pole-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
-                <p class="text-center text-dark"><b>Lamp Pole Lightbox</b></p>
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="lamp-pole-display.html">
-                <img src="assets/img/Lamp-Pole-Display/tgg.png" alt="" class="img-fluid border border-dark">
-                <p class="text-center text-dark"><b>Lamp Pole Display</b></p>
-              </a>
-            </div>
+          <div class="item">
+            <a href="frontlit-billboard.html">
+              <img src="assets/img/frontlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Frontlit Billboard</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="backlit-billboard.html">
+              <img src="assets/img/backlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Backlit Billboard</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="led-screen-billboard.html">
+              <img src="assets/img/LED-Screen-Billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LED Screen Billboard</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="scrolling-billboard.html">
+              <img src="assets/img/scrolling-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Scrolling Billboard</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="scrolling-lightbox.html">
+              <img src="assets/img/Scrolling-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Scrolling Lightbox</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="lamp-pole-lightbox.html">
+              <img src="assets/img/Lamp-Pole-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Lamp Pole Lightbox</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="lamp-pole-display.html">
+              <img src="assets/img/Lamp-Pole-Display/tgg.png" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Lamp Pole Display</b></p>
+            </a>
           </div>
         </div>
-
       </div>
-    </section>
-    <!-- End Features Section -->
+    </div>
+    
 
     <!-- ======= Features Section ======= -->
     <section class="about">
@@ -1505,6 +1495,28 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="assets/owlcarousel/owl.carousel.min.js"></script>
+  <script>
+    $('.owl-carousel').owlCarousel({
+      loop: true,
+      margin: 10,
+      nav: true,
+      responsive: {
+        0: {
+          items: 1
+        },
+        600: {
+          items: 3
+        },
+        1000: {
+          items: 4
+        }
+      }
+    })
+  </script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
