--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <h2 class="text-center text-uppercase text-danger fw-bold">Some of Our Digital Signage Product
       </h2>
       <div class="row">
-        <div class="owl-carousel owl-theme ">
+        <div class="owl-carousel owl-theme" id="aboutus">
           <div class="item">
             <a href="indoor-lcd-display.html">
               <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-dark">
@@ -334,7 +334,7 @@
     <section class="about">
       <div class="container">
         <div class="row content text-center" id="howItWorks">
-          <h2>DIGITAL SIGNAGE EVERYONE CAN USE</h2>
+          <h2>WHY WITH US</h2>
           <div class="col-md-4">
             <img width="80" height="80" class="img-fluid" src="assets/img/features/content.png" alt="">
             <br>
@@ -372,7 +372,7 @@
 
         <div class="row content">
           <div class="text-center">
-            <h2>HOW IT WORKS</h2>
+            <h2>WELCOME</h2>
             <p>Displaying new content to your customers couldn’t be easier and quicker with our Signage software.
               With the ability of logging on to your personal portal from any pc connected to the internet you can
               control
